--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,43 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/assets/main.css" />
 
-    <script>  
-      // Remove this script if you don't need the dark mode toggle  
-      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
-      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-        document.documentElement.classList.add('dark')
-        
-      } else {
-        document.documentElement.classList.remove('dark')
-      }
+<head>
+  <title>{{ title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
+</head>
 
-      const toggleDarkMode = function(){
-        if (document.documentElement.classList.contains('dark')) {
-          document.documentElement.classList.remove('dark');
-          localStorage.theme = 'light';      
-        } else {
-          document.documentElement.classList.add('dark')
-          localStorage.theme = 'dark'
-        }
-      };   
+<body class="bg-[#23252a] text-[rgb(243,217,122)]">
 
-      const forgetPref = function(){
-        localStorage.removeItem('theme')
-        window.location.reload()
-      }
-    </script>
+<main class="p-12">
+  {% include "../components/header.njk" %}
+  {{ content | safe }}
+</main>
 
-  </head>
-  <body class="dark:bg-zinc-800 dark:text-white">
-    {% include "../components/navigation.njk" %}
-    <main class="p-12 ">
-      <h1 class="text-3xl mb-8">{{title}}</h1>
-      {{ content | safe }}
-    </main>
-    <script src="/assets/main.js"></script>
-  </body>
+<script src="/assets/main.js"></script>
+</body>
+
 </html>
