--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.pixel {
+    image-rendering: pixelated;
+}
+
+@supports (font-variation-settings: normal) {
+    @font-face {
+        font-family: JetBrains Sans;
+        src: url(https://resources.jetbrains.com/storage/jetbrains-sans/JetBrainsSans.woff2) format("woff2 supports variations"), url(https://resources.jetbrains.com/storage/jetbrains-sans/JetBrainsSans.woff2) format("woff2-variations"), url(https://resources.jetbrains.com/storage/jetbrains-sans/JetBrainsSans.woff) format("woff-variations");
+        font-weight: 100 900;
+    }
+}
+
+body {
+    font-family: "JetBrains Sans", serif;
+}
