[style] add color variables

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
 </head>
 
-<body class="bg-[#23252a] text-[rgb(243,217,122)]">
+<body class="bg-[var(--bg)] text-[var(--accent)]">
 
 <main class="p-12">
   {% include "../components/header.njk" %}
