[layout] base layout

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
 
 <body class="bg-[var(--bg)] text-[var(--accent)]">
 
-<main class="p-12">
+<main class="px-32 py-8 flex flex-col items-center">
   {% include "../components/header.njk" %}
   {{ content | safe }}
 </main>
