--- a/src/index.njk
+++ b/src/index.njk
@@ -3,3 +3,15 @@ title: Home
 layout: layouts/base.njk
 ---
 
+{% for year in games %}
+<div class="group text-[var(--bg)] relative w-full my-24 overflow-visible">
+  {# projects #}
+  {% for p in year.projects %}
+    {% set project = p %}
+    {% include "components/project.njk" %}
+  {% endfor %}
+
+  <div class="absolute top-0 size-full bg-[var(--accent)] opacity-50 group-hover:opacity-100 -z-10 transition-opacity"></div>
+  <div class="text-[8rem] text-[var(--accent)] font-extrabold absolute rotate-2 z-[-1] top-[-6.5rem] right-16">{{ year.year }}</div>
+</div>
+{% endfor %}
