--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/main.css"/>
 </head>
 
-<body class="bg-[var(--bg)] text-[var(--accent)]">
+<body class="bg-[--bg] text-[--accent]">
 
 <main class="px-32 py-8 flex flex-col items-center">
   {% include "../components/header.njk" %}
