--- a/src/index.njk
+++ b/src/index.njk
@@ -11,7 +11,7 @@ layout: layouts/base.njk
     {% include "components/project.njk" %}
   {% endfor %}
 
-  <div class="absolute top-0 size-full bg-[--accent] opacity-50 group-hover:opacity-100 -z-10 transition-opacity"></div>
+  <div class="absolute top-0 size-full bg-[--accent] opacity-50 group-hover:opacity-100 -z-10 transition ease-in duration-200"></div>
   <div class="text-[8rem] text-[--accent] font-extrabold absolute rotate-2 z-[-1] top-[-6.5rem] right-16">{{ year.year }}</div>
 </div>
 {% endfor %}
