--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@ layout: layouts/base.njk
 ---
 
 {% for year in games %}
-<div class="group text-[--bg] relative w-full my-24 py-8 overflow-visible">
+<div class="group text-[--bg] relative w-full my-12 md:my-24 md:py-24 py-8 overflow-visible">
   {# projects #}
   {% for p in year.projects %}
     {% set project = p %}
@@ -12,6 +12,6 @@ layout: layouts/base.njk
   {% endfor %}
 
   <div class="absolute top-0 size-full bg-[--accent] opacity-50 group-hover:opacity-100 -z-10 transition ease-in duration-200"></div>
-  <div class="text-[8rem] text-[--accent] font-extrabold absolute rotate-2 z-[-1] top-[-6.5rem] right-16">{{ year.year }}</div>
+  <div class="text-[5rem] md:text-[6rem] lg:text-[8rem] text-[--accent] font-extrabold absolute rotate-2 z-[-1] top-[-4rem] md:top-[-4.75rem] lg:top-[-6.5rem] right-12 md:right-14 lg:right-16">{{ year.year }}</div>
 </div>
 {% endfor %}
