--- a/src/_includes/components/project.njk
+++ b/src/_includes/components/project.njk
@@ -1,5 +1,5 @@
 <div class="text-sm md:text-base lg:text-lg group/project py-6 md:py-8 px-0 md:px-16 lg:px-24 flex flex-col md:flex-row items-center">
-  <img class="w-[270px] h-[180px] object-cover opacity-75 group-hover/project:opacity-100 transition ease-in duration-200 shrink-0 rounded-[8px] crisp" src="{{ project.name | imgFilter | url }}">
+  <img class="w-[270px] h-[180px] object-cover md:opacity-75 md:group-hover/project:opacity-100 transition ease-in duration-200 shrink-0 rounded-[8px] crisp" src="{{ project.name | imgFilter | url }}">
   <div class="flex flex-col items-center md:items-start px-8 pt-3 md:pt-0">
     <div class="font-bold text-center md:text-start text-3xl md:text-4xl lg:text-5xl">{{ project.name }}</div>
     <div class="flex flex-row justify-center md:justify-normal flex-wrap my-2">
