deploy: a8b1326e83d2f80eef47d8be29d49c51a97e10d4

--- a/assets/main.css
+++ b/assets/main.css
@@ -848,11 +848,11 @@ body {
     opacity: 0.5;
   }
 
-  .md\:opacity-75 {
-    opacity: 0.75;
+  .md\:opacity-65 {
+    opacity: 0.65;
   }
 
-  .group\/project:hover .md\:group-hover\/project\:opacity-100 {
+  .group:hover .md\:group-hover\:opacity-100 {
     opacity: 1;
   }
 }
