[setup] Migrate to eleventy 3

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
   <title>{{ title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="{{ '/assets/main.css' | url }}"/>
+  <meta name="generator" content="{{ eleventy.generator }}">
 </head>
 
 <body class="bg-[--bg] text-[--accent] overflow-x-hidden">
